--- a/src/templates/otpTemplate.hbs
+++ b/src/templates/otpTemplate.hbs
@@ -66,7 +66,7 @@
     </p>
 
     <div class="footer">
-      &copy; {{year}} Food App. All rights reserved.
+      &copy; {{year}} Dating App. All rights reserved.
     </div>
   </div>
 </body>
